# aws_aegis_aura

./: .gitignore  AEGIS-Agentic-AI-Platform.plan.md  README.md  main.py  pyproject.toml  requirements.txt  run_local.py
ML_DL_Models/aegis_ml/: __init__.py
ML_DL_Models/batch/: __init__.py  batch_inference.py
ML_DL_Models/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
ML_DL_Models/cli/: __init__.py  batch.py  train.py
ML_DL_Models/configs/: __init__.py  settings.py
ML_DL_Models/data/: __init__.py  loader.py
ML_DL_Models/deployment/: __init__.py  sagemaker_deploy.py
ML_DL_Models/features/: __init__.py  customer.py  graph.py  transaction.py  utils.py
ML_DL_Models/inference/: __init__.py  sagemaker_handler.py
ML_DL_Models/model_output/: IMPLEMENTATION_SUMMARY.md  MODEL_REPORT.md  categorical_transformer_metrics.json  fraud_metrics.json  model_metrics_table.csv  mule_metrics.json  rl_metrics.json
ML_DL_Models/models/: AdvModels_README.md  CurrentModels.md  FraudDetection.md  InitailModels.md  InitialModels.ipynb  __init__.py  adversarial_trainer.py  aegis_advanced_ml_training.py  autoencoder.py  gnn_models.py  multimodal_fusion.py  preprocessing.py  risk_scorer.py  rl_threshold_optimizer.py  sequences.py  transformers.py  utils.py
ML_DL_Models/monitoring/: __init__.py  metrics.py  shap_explainer.py  shap_visualizer.py
backend/: Dockerfile  __init__.py  agentcore_app.py  agentcore_entrypoints.py  requirements.txt  startup_status.txt
backend/api/: app.py  (+1 more)
docs/: AGENTCORE_SETUP_GUIDE.md  AGENTS.md  ARCHITECTURE.md  DEPLOYMENT.md  RESPONSIBLE_AI.md  agentcore_runtime.md
frontend/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
(+240 files in other folders)
