[project]
name = "agenticai-for-authorized-push-payments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=4.0.0",
    "aws-opentelemetry-distro>=0.12.1",
    "aws-xray-sdk>=2.14.0",
    "bedrock-agentcore>=1.0.0",
    "bedrock-agentcore-starter-toolkit>=0.1.3",
    "boto3>=1.40.48",
    "botocore>=1.40.48",
    "catboost>=1.2.0",
    "click>=8.3.0",
    "cryptography>=46.0.3",
    "faker>=37.11.0",
    "fastapi>=0.119.0",
    "fastparquet>=0.8.0",
    "gymnasium>=0.28.1",
    "httpx>=0.28.1",
    "joblib>=1.3.0",
    "lightgbm>=4.0.0",
    "matplotlib>=3.5.0",
    "neo4j>=6.0.2",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "opentelemetry-api>=1.33.1",
    "opentelemetry-instrumentation-botocore>=0.54b1",
    "opentelemetry-instrumentation-fastapi>=0.54b1",
    "opentelemetry-sdk>=1.33.1",
    "pandas>=2.0.0",
    "pluggy>=1.6.0",
    "polars ; extra == 'polars'",
    "pyarrow>=10.0.0",
    "pydantic>=2.12.2",
    "pydantic-settings>=2.11.0",
    "pyjwt[crypto]>=2.10.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "sagemaker>=2.92.0",
    "scikit-learn>=1.3.0",
    "sdv>=1.27.0",
    "seaborn>=0.11.0",
    "shap>=0.42.0",
    "strands>=0.1.0",
    "strands-agents>=1.1.0",
    "strands-agents-tools>=0.2.11",
    "structlog>=25.4.0",
    "torch>=2.0.0",
    "torch>=2.8.0 ; extra == 'torch'",
    "torchmetrics>=1.4.0",
    "uvicorn[standard]>=0.37.0",
    "xgboost>=2.0.0",
]
